[gd_scene load_steps=9 format=3 uid="uid://dcdanbyx5hp3g"]

[ext_resource type="Texture2D" uid="uid://cnj00cempx1oj" path="res://UI/fonts,maine_menu/Dark Castle (1).png" id="1_32pw5"]
[ext_resource type="Script" path="res://UI/Main Menu/main_menu.gd" id="1_714dk"]
[ext_resource type="FontFile" uid="uid://cicwsmhj66bsv" path="res://UI/fonts,maine_menu/ThaleahFat.ttf" id="3_i4aw1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rxr2n"]
texture = ExtResource("1_32pw5")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gbb66"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c28nj"]
bg_color = Color(0.485703, 0.485704, 0.485703, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.278431)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j3vsg"]
bg_color = Color(0.319873, 0.319873, 0.319873, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.278431)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5nqjw"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.278431)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_714dk")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
offset_left = -155.5
offset_top = 109.5
offset_right = 155.5
offset_bottom = 109.5
theme_override_styles/panel = SubResource("StyleBoxTexture_rxr2n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.5
offset_top = -102.5
offset_right = 155.5
offset_bottom = 102.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_i4aw1")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_gbb66")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_c28nj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_j3vsg")
theme_override_styles/normal = SubResource("StyleBoxFlat_5nqjw")
text = "Start
"

[node name="Load" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_i4aw1")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_gbb66")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_c28nj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_j3vsg")
theme_override_styles/normal = SubResource("StyleBoxFlat_5nqjw")
text = "Load
"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_i4aw1")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_gbb66")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_c28nj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_j3vsg")
theme_override_styles/normal = SubResource("StyleBoxFlat_5nqjw")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -202.0
offset_right = 71.0
offset_bottom = -179.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.821331, 0.0571751, 0.138927, 1)
theme_override_constants/shadow_offset_x = -6
theme_override_fonts/font = ExtResource("3_i4aw1")
theme_override_font_sizes/font_size = 70
text = "Resident Medieval"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_save_and_exit_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
